DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-24-2004 patrickh    Sped up validation of .jdef and .jconf files.
                        NEW VERSION: 0.23.3
Nov-19-2004 patrickh    Restored the ability for .jconf files to extend the
                        .jdef file search path.
                        NEW VERSION: 0.23.2
Nov-17-2004 patrickh    Fixed config file lookup problems that showed up under
                        very specific circumstances.
                        NEW VERSION: 0.23.1
Nov-12-2004 patrickh    In the Java APi, the notion that a property definition
                        has a name other than its XML token has been removed.
                        NEW VERSION: 0.23.0
Nov-12-2004 patrickh    Fixed the config definition editor.
                        NEW VERSION: 0.22.0
Nov-05-2004 patrickh    Updated to require Tweek 0.19.2.
                        NEW VERSION: 0.21.1
Nov-04-2004 aronb       Java API changes.
                        NEW VERSION: 0.21.0
Oct-29-2004 patrickh    Relocated the JCCL Java libraries to the directory
                        $JCCL_BASE_DIR/share/jccl/java and the JCCL Beans to
                        $JCCL_BASE_DIR/share/jccl/beans.
                        NEW VERSION: 0.20.0
Oct-18-2004 patrickh    Re-enabled validation of .jconf and .jdef files
                        loaded into the Java configuration editor Bean.
                        NEW VERSION: 0.19.2
Oct-11-2004 patrickh    Updated to require VPR 0.40.0.
                        NEW VERSION: 0.19.1
Oct-07-2004 patrickh    Extended the property definition editor to allow the
                        "editable" attribute for enumerations to be changed.
                        NEW VERSION: 0.19.0
Sep-17-2004 patrickh    Introduced the concept of editable enumerations for use
                        in VRJConfig.  The config definition file format has